CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_16_20252112_1534.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=16 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_const_while.exe aco_cuda_global_while.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=16 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_global_while.cu(932): error: argument of type "const double *" is incompatible with parameter of type "double *"
      antColonyOptimization_and_deposit_warp_optimized_dev(dev_parametr_value, norm_matrix_probability, hashTable, maxOf_dev, minOf_dev, kol_hash_fail, pheromon, kol_enter);
                                                                               ^

1 error detected in the compilation of "aco_cuda_global_while.cu".
aco_cuda_global_while.cu
========== COMPILATION END ========== 
Exit code: 2 
